syntax = "proto3";

import "transaction_metadata.proto";

package tari.transaction_protocol;

message SingleRoundSenderData {
    // The transaction id for the recipient
    uint64 tx_id = 1;
    // The amount, in ÂµT, being sent to the recipient
    uint64 amount = 2;
    // The offset public excess for this transaction
    bytes public_excess = 3;
    // The sender's public nonce
    bytes public_nonce = 4;
    // The transaction metadata
    TransactionMetadata metadata = 5;
    // Plain text message to receiver
    string message = 6;
    // Tari script serialised script hash
    bytes script_hash = 7;
    // Tari script offset pubkey, K_O
    bytes script_offset_public_key = 8;
}

message TransactionSenderMessage {
    oneof message {
        bool None = 1;
        SingleRoundSenderData single = 2;

        // TODO: Three round types

        bool Multiple = 3;
    }
}
